styx-format/src/snapshots/styx_format__cst_format__tests__fmt_014_nested_inline_objects.snap
---
source: crates/styx-format/src/cst_format.rs
expression: "format(\"outer {inner {value 42}}\")"
---
outer {inner {value 42}}
