styx-format/src/snapshots/styx_format__cst_format__tests__fmt_015_inline_object_with_tags.snap
---
source: crates/styx-format/src/cst_format.rs
expression: "format(\"schema {name @string, age @int}\")"
---
schema {name @string, age @int}
