styx-format/src/snapshots/styx_format__cst_format__tests__fmt_016_tag_with_inline_object_payload.snap
---
source: crates/styx-format/src/cst_format.rs
expression: "format(\"type @object{name @string}\")"
---
type @object{name @string}
