styx-format/src/snapshots/styx_format__cst_format__tests__fmt_017_inline_object_no_commas.snap
---
source: crates/styx-format/src/cst_format.rs
expression: "format(\"config {a 1 b 2}\")"
---
config {a 1 b 2}
