styx-format/src/snapshots/styx_format__cst_format__tests__fmt_018_inline_object_mixed_separators.snap
---
source: crates/styx-format/src/cst_format.rs
expression: "format(\"config {a 1, b 2 c 3}\")"
---
config {a 1, b 2 c 3}
