styx-format/src/snapshots/styx_format__cst_format__tests__fmt_019_deeply_nested_inline.snap
---
source: crates/styx-format/src/cst_format.rs
expression: "format(\"a {b {c {d {e 1}}}}\")"
---
a {b {c {d {e 1}}}}
