styx-format/src/snapshots/styx_format__cst_format__tests__fmt_020_inline_with_unit_values.snap
---
source: crates/styx-format/src/cst_format.rs
expression: "format(\"flags {debug @, verbose @}\")"
---
flags {debug @, verbose @}
