styx-format/src/snapshots/styx_format__cst_format__tests__fmt_022_block_object_irregular_indent.snap
---
source: crates/styx-format/src/cst_format.rs
expression: "format(\"config {\\n    name foo\\n  value bar\\n}\")"
---
config {
    name foo
    value bar
}
