styx-format/src/snapshots/styx_format__cst_format__tests__fmt_023_nested_block_objects.snap
---
source: crates/styx-format/src/cst_format.rs
expression: "format(\"outer {\\n  inner {\\n    value 42\\n  }\\n}\")"
---
outer {
    inner {
        value 42
    }
}
