styx-format/src/snapshots/styx_format__cst_format__tests__fmt_024_block_with_inline_child.snap
---
source: crates/styx-format/src/cst_format.rs
expression: "format(\"config {\\n  point {x 1, y 2}\\n  name foo\\n}\")"
---
config {
    point {x 1, y 2}
    name foo
}
