styx-format/src/snapshots/styx_format__cst_format__tests__fmt_025_inline_with_block_child.snap
---
source: crates/styx-format/src/cst_format.rs
expression: "format(\"config {nested {\\n  a 1\\n}}\")"
---
config {
    nested {
        a 1
    }
}
